# fdlsgm

./: .gitignore  MANIFEST.in  Makefile  README.md  fdlsgm.pyx  pyproject.toml  setup.py
.github/workflows/: test_cc.yml
src/: baseline.cc  dls.cc  fdlsgm.h  find_segments.cc  jacobi.cc  linalg.h  misc.cc
test/: .gitignore  sample.cc  sample_output.txt  sample_plot.gp  sample_xy0.cc  sample_xy0_plot.gp  sample_xyt.cc  sample_xyt_output.txt  sample_xyt_plot.gp  sample_xyz.cc  sample_xyz_output.txt  sample_xyz_plot.gp
